[tool.poetry]
name = "tfg-pruebaa"
version = "0.1.0"
description = ""
authors = ["ikerbnt <iker.benitod@alumni.mondragon.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
streamlit = "^1.42.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
